Add two new sections

--- a/index.html
+++ b/index.html
@@ -114,6 +114,48 @@
         <button class="advatages-description--btn">Learn More</button>
       </section>
     </section>
+    <section class="why-us">
+      <section class="why-us-description">
+        <h2 class="why-us-description--title">
+          Lorem ipsum dolor sit amet consectetur
+        </h2>
+        <p class="why-us-description--info">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit
+          nemo hic quos, ab, dolor aperiam nobis cum est eos error ipsum,
+          voluptate culpa nesciunt delectus iste?
+        </p>
+        <button class="whyus-description--btn">Learn More</button>
+      </section>
+      <section><img src="./assets/images/whyUs.svg" alt="" /></section>
+    </section>
+    <section class="team">
+      <h6>Welcome</h6>
+      <h2 class="team-description--title">Our Talents</h2>
+      <p class="team-description--info">
+        Lorem ipsum, dolor sit amet consectetur Suscipit nemo hic quos, ab,
+      </p>
+      <div class="team-card">
+        <img src="./assets/images/peg.svg" alt="" />
+        <p class="team-card--name">Peg Legge</p>
+        <p class="team-card-occupancy">CEO</p>
+      </div>
+      <div class="team-card">
+        <img src="./assets/images/richard.svg" alt="" />
+        <p class="team-card--name">Richard Guerra</p>
+        <p class="team-card-occupancy">CTO</p>
+      </div>
+      <div class="team-card">
+        <img src="./assets/images/alexandra.svg" alt="" />
+        <p class="team-card--name">Alexandra Stolz</p>
+        <p class="team-card-occupancy">DESIGNER</p>
+      </div>
+      <div class="team-card">
+        <img src="./assets/images/janet.svg" alt="" />
+        <p class="team-card--name">Janet Bray</p>
+        <p class="team-card-occupancy">DEVELOPER</p>
+      </div>
+      <button class="team--btn">View Team</button>
+    </section>
     <footer class="footer">
       <section class="footer-media--list">
         <ul>
